# Websites

.claude/: settings.local.json
EnglishCourse/: .env.example  .htaccess  composer.json  index.html  package-lock.json  package.json  postcss.config.cjs  readme.md  send_email.php  vite.config.js
EnglishCourse/api/: .env.example  .htaccess  admin.php  bootstrap.php  clear_history.php  contact_form_handler.php  create_stripe_checkout.php  db_connect.php  delete_history_item.php  get_daily_phrases.php  get_session_details.php  get_user_history.php  get_user_progress.php  get_user_status.php  handle_stripe_webhook.php  login.php  manage_subscription.php  (+7 more)
FenixHelpPT/: .gitignore  .htaccess  index.html  index.php  package-lock.json  package.json  vite.config.js
GuiDeCode/: .gitignore  README.md  index.html  tailwind.config.js  vite.config.js
HoldingComp/: .gitignore  index.html  package-lock.json  package.json
MedBooking/: .env.example  .gitignore  .htaccess  composer.json  index.html  jsconfig.json  package.json  vite.config.js
Nutragenius/: .gitignore  .htaccess  composer.json  index.html  package.json  tailwind.config.js  vite.config.js
SeqNode/: .gitignore  index.html  mcp_config_example.json  package-lock.json  package.json  requirements.txt  run_server.py
SeqNode/public/downloads/agent/agent/: .gitignore  agent.py  agent_gui.py  build-windows.bat  build.sh  config.py  executor.py  monitor.py  pyproject.toml  requirements.txt  security.py  seqnode-agent.manifest  ws_client.py
SeqNode/public/downloads/agent/agent/.github/workflows/: build-all.yml
(+595 files in other folders)
